--- a/W8D4/reversi/.vscode/launch.json
+++ b/W8D4/reversi/.vscode/launch.json
@@ -22,6 +22,7 @@
         "<node_internals>/**"
       ]
     },
+    
     {
       "type": "node",
       "request": "launch",
@@ -29,7 +30,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${file}"
+      "program": "${workspaceFolder}/bin/main.js"
     }
   ]
 }
